# writer-ai

./: .gitignore  CLAUDE.md  README.md  create_dmg.sh  install.sh  package_app.sh  run_writer_ai.sh
.github/workflows/: release.yml  rust.yml  swift-release.yml
configs/: config_ollama.toml
docs/: 00_init.md  01_caching_strategy.md  01_caching_strategy_summary.md  01_performance_opt.md  01_performance_opt_results.md  github_ci.md  hotkey_configuration.md  installation.md
release/WriterAI.app/Contents/: Info.plist
rust_service/: Cargo.toml  Makefile  README.md
rust_service/.github/workflows/: rust.yml
rust_service/src/: cache.rs  config.rs  errors.rs  http.rs  lib.rs  llm.rs  main.rs
rust_service/tests/: README.md  cache_integration_test.rs  llm_integration_tests.rs  llm_test_sentences.toml  llm_test_sentences_with_expected.toml
rust_service/tests/config_files/: config_ollama_gemma3.toml  config_ollama_llama2.toml  config_ollama_phi4.toml  config_openai_gpt4o.toml
rust_service/tests/config_files/pause/: config_ollama_gemma3.toml  config_ollama_gemma3_4b.toml  config_ollama_gemma3_it.toml  config_ollama_mistral.toml  config_ollama_qwen2_5.toml  config_ollama_qwen2_5_inst.toml
swift_agent/WriterAIHotkeyAgent/: README.md
swift_agent/WriterAIHotkeyAgent/WriterAIHotkeyAgent/: AppDelegate.swift  ContentView.swift  Info.plist  WriterAIHotkeyAgent.entitlements  WriterAIHotkeyAgentApp.swift
swift_agent/WriterAIHotkeyAgent/WriterAIHotkeyAgent.xcodeproj/: project.pbxproj
templates/: gpt-4o.toml  launchd.plist  ollama.toml
(+1 files in other folders)
