[package]
name = "writer_ai_rust_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
config = { version = "0.14", features = ["toml"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
sled = "0.34"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.9"
async-trait = "0.1"
wiremock = "0.5"
toml = "0.8"
tokio-test = "0.4"
http = "1.0" 
tower = "0.4"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
csv = "1.3"
strsim = "0.10"  # For string similarity metrics
